--- a/views/cha.ejs
+++ b/views/cha.ejs
@@ -26,10 +26,11 @@
                 <input type="text" name="category_name" list="category" autocomplete="off"
                     value="<%=obj.category_name %>">
                 <datalist id="category">
-                    <option>白玫瑰</option>
-                    <option>红玫瑰</option>
-                    <option>香槟玫瑰</option>
-                    <option>粉色玫瑰</option>
+                    <option>玫瑰</option>
+                    <option>郁金香</option>
+                    <option>绣球花</option>
+                    <option>康乃馨</option>
+                    <option>向日葵</option>
                 </datalist>
             </p>
         </div>
