--- a/views/shopsingle.ejs
+++ b/views/shopsingle.ejs
@@ -139,7 +139,7 @@
             </div>
 
             </div>
-            <p><a href="/cart/add" class="buy-now btn btn-sm btn-primary">加入购物车</a></p>
+            <p><a href="/shop/add/<%=obj.id %>" class="buy-now btn btn-sm btn-primary">加入购物车</a></p>
 
           </div>
         </div>
