--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -122,10 +122,14 @@
                   <% for(var i=0 ;i < list.length; i++){ %>
                   <tr datakey=<%=list[i].cid %> >
                     <td class="product-thumbnail">
-                      <img src="<%=list[i].product_img %>" alt="Image" class="img-fluid">
+                      <a href="/shop/<%=list[i].pid %>">
+                        <img src="<%=list[i].product_img %>" alt="Image" class="img-fluid">
+                      </a>
                     </td>
                     <td class="product-name">
-                      <h2 class="h5 text-black"><%=list[i].product_name %></h2>
+                      <a href="/shop/<%=list[i].pid %>">
+                        <h2 class="h5 text-black"><%=list[i].product_name %></h2>
+                      </a>
                     </td>
                     <td>$<%=list[i].price %></td>
                     <td>
@@ -154,13 +158,13 @@
           <div class="col-md-6">
             <div class="row mb-5">
               <div class="col-md-6 mb-3 mb-md-0">
-                <button class="btn btn-primary btn-sm btn-block">清空购物车</button>
+                <button class="btn btn-primary btn-sm btn-block" id="clean">清空购物车</button>
               </div>
               <div class="col-md-6">
                 <button class="btn btn-outline-primary btn-sm btn-block" onclick="window.location='/shop'">继续购物</button>
               </div>
             </div>
-            <div class="row">
+            <!-- <div class="row">
               <div class="col-md-12">
                 <label class="text-black h4" for="coupon">优惠劵</label>
                 <p>请输入您的优惠券代码</p>
@@ -171,7 +175,7 @@
               <div class="col-md-4">
                 <button class="btn btn-primary btn-sm">领取优惠劵</button>
               </div>
-            </div>
+            </div> -->
           </div>
           <div class="col-md-6 pl-5">
             <div class="row justify-content-end">
