--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -199,7 +199,7 @@
             </div>
           </div>
           <div class="col-md-6">
-            <div class="row mb-5">
+            <!-- <div class="row mb-5">
               <div class="col-md-12">
                 <h2 class="h3 mb-3 text-black">优惠劵代码</h2>
                 <div class="p-3 p-lg-5 border">
@@ -213,7 +213,7 @@
 
                 </div>
               </div>
-            </div>
+            </div> -->
             
             <div class="row mb-5">
               <div class="col-md-12">
