--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Shoppers &mdash; Colorlib e-Commerce Template</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Mukta:300,400,700"> 
-    <link rel="stylesheet" href="/stylesheets/fonts/icomoon/style.css">
+<head>
+  <title>Shoppers &mdash; Colorlib e-Commerce Template</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
-    <link rel="stylesheet" href="/stylesheets/magnific-popup.css">
-    <link rel="stylesheet" href="/stylesheets/jquery-ui.css">
-    <link rel="stylesheet" href="/stylesheets/owl.carousel.min.css">
-    <link rel="stylesheet" href="/stylesheets/owl.theme.default.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Mukta:300,400,700">
+  <link rel="stylesheet" href="/stylesheets/fonts/icomoon/style.css">
+
+  <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
+  <link rel="stylesheet" href="/stylesheets/magnific-popup.css">
+  <link rel="stylesheet" href="/stylesheets/jquery-ui.css">
+  <link rel="stylesheet" href="/stylesheets/owl.carousel.min.css">
+  <link rel="stylesheet" href="/stylesheets/owl.theme.default.min.css">
 
 
-    <link rel="stylesheet" href="/stylesheets/aos.css">
+  <link rel="stylesheet" href="/stylesheets/aos.css">
 
-    <link rel="stylesheet" href="/stylesheets/style1.css">
-    
-  </head>
-  <body>
-  
+  <link rel="stylesheet" href="/stylesheets/style1.css">
+
+</head>
+
+<body>
+
   <div class="site-wrap">
     <header class="site-navbar" role="banner">
       <div class="site-navbar-top">
@@ -51,15 +53,16 @@
                       <span class="icon icon-shopping_cart"></span>
                       <span class="count">2</span>
                     </a>
-                  </li> 
-                  <li class="d-inline-block d-md-none ml-md-0"><a href="#" class="site-menu-toggle js-menu-toggle"><span class="icon-menu"></span></a></li>
+                  </li>
+                  <li class="d-inline-block d-md-none ml-md-0"><a href="#" class="site-menu-toggle js-menu-toggle"><span
+                        class="icon-menu"></span></a></li>
                 </ul>
-              </div> 
+              </div>
             </div>
 
           </div>
         </div>
-      </div> 
+      </div>
       <nav class="site-navigation text-right text-md-center" role="navigation">
         <div class="container">
           <ul class="site-menu js-clone-nav d-none d-md-block">
@@ -97,7 +100,8 @@
     <div class="bg-light py-3">
       <div class="container">
         <div class="row">
-          <div class="col-md-12 mb-0"><a href="/index">首页</a> <span class="mx-2 mb-0">/</span> <a href="/cart">购物车</a> <span class="mx-2 mb-0">/</span> <strong class="text-black">结算</strong></div>
+          <div class="col-md-12 mb-0"><a href="/index">首页</a> <span class="mx-2 mb-0">/</span> <a href="/cart">购物车</a>
+            <span class="mx-2 mb-0">/</span> <strong class="text-black">结算</strong></div>
         </div>
       </div>
     </div>
@@ -106,115 +110,33 @@
       <div class="container">
         <div class="row mb-5">
           <div class="col-md-12">
-            <!-- <div class="border p-4 rounded" role="alert">
-              Returning customer? <a href="#">Click here</a> to login
-            </div> -->
           </div>
         </div>
         <div class="row">
           <div class="col-md-6 mb-5 mb-md-0">
             <h2 class="h3 mb-3 text-black">结算明细</h2>
             <div class="p-3 p-lg-5 border">
-              <div class="form-group row">
-                <div class="col-md-6">
-                  <label for="c_fname" class="text-black">收货人<span class="text-danger">*</span></label>
-                  <input type="text" class="form-control" id="c_fname" name="c_fname">
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="c_country" class="text-black">省市<span class="text-danger">*</span></label>
-                <select id="c_country" class="form-control">
-                  <option value="2">bangladesh</option>    
-                  <option value="3">Algeria</option>    
-                  <option value="4">Afghanistan</option>    
-                  <option value="5">Ghana</option>    
-                  <option value="6">Albania</option>    
-                  <option value="7">Bahrain</option>    
-                  <option value="8">Colombia</option>    
-                  <option value="9">Dominican Republic</option>    
-                </select>
-              </div>
-              <div class="form-group row">
-                <div class="col-md-12">
-                  <label for="c_address" class="text-black">地址 <span class="text-danger">*</span></label>
-                  <input type="text" class="form-control" id="c_address" name="c_address" placeholder="街道地址">
-                </div>
-              </div>
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="小区楼栋/乡村名称">
-              </div>
-              <div class="form-group row">
-                <div class="col-md-6">
-                  <label for="c_diff_phone" class="text-black">电话号码<span class="text-danger">*</span></label>
-                  <input type="text" class="form-control" id="c_diff_phone" name="c_diff_phone" placeholder="电话号码">
-               </div>
-              </div>
-
-              <div class="form-group">
-                <label for="c_ship_different_address" class="text-black" data-toggle="collapse" href="#ship_different_address" role="button" aria-expanded="false" aria-controls="ship_different_address"><input type="checkbox" value="1" id="c_ship_different_address">更改地址</label>
-                <div class="collapse" id="ship_different_address">
-                  <div class="py-2">
-                    <div class="form-group row">
-                      <div class="col-md-6">
-                        <label for="c_fname" class="text-black">收货人<span class="text-danger">*</span></label>
-                        <input type="text" class="form-control" id="c_fname" name="c_fname">
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <label for="c_country" class="text-black">省市<span class="text-danger">*</span></label>
-                      <select id="c_country" class="form-control">
-                        <option value="2">bangladesh</option>    
-                        <option value="3">Algeria</option>    
-                        <option value="4">Afghanistan</option>    
-                        <option value="5">Ghana</option>    
-                        <option value="6">Albania</option>    
-                        <option value="7">Bahrain</option>    
-                        <option value="8">Colombia</option>    
-                        <option value="9">Dominican Republic</option>    
-                      </select>
-                    </div>
-                    <div class="form-group row">
-                      <div class="col-md-12">
-                        <label for="c_address" class="text-black">地址 <span class="text-danger">*</span></label>
-                        <input type="text" class="form-control" id="c_address" name="c_address" placeholder="街道地址">
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <input type="text" class="form-control" placeholder="小区楼栋/乡村名称">
-                    </div>
-                    <div class="form-group row">
-                      <div class="col-md-6">
-                        <label for="c_diff_phone" class="text-black">电话号码<span class="text-danger">*</span></label>
-                        <input type="text" class="form-control" id="c_diff_phone" name="c_diff_phone" placeholder="电话号码">
-                     </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="form-group">
-                <label for="c_order_notes" class="text-black">订单备注</label>
-                <textarea name="c_order_notes" id="c_order_notes" cols="30" rows="5" class="form-control" placeholder="选填，请先和商家协商一致"></textarea>
-              </div>
+              <form >
+              <label for="c_fname" class="text-black">收货人<span class="text-danger">*</span></label>
+              <input type="text" class="form-control" id="c_fname" name="c_fname">
+              <label for="province" class="text-black">省<span class="text-danger">*</span></label>
+              <select id="province" class="form-control"></select>
+              <label for="city" class="text-black">市<span class="text-danger">*</span></label>
+              <select id="city" class="form-control"></select>
+              <label for="county" class="text-black">区<span class="text-danger">*</span></label>
+              <select id="county" class="form-control"></select>
+              <label for="c_address" class="text-black">地址 <span class="text-danger">*</span></label>
+              <input type="text" class="form-control" id="c_address" name="c_address" placeholder="街道地址">
+              <label for="c_diff_phone" class="text-black">电话号码<span class="text-danger">*</span></label>
+              <input type="text" class="form-control" id="c_diff_phone" name="c_diff_phone" placeholder="电话号码">
+              <label for="c_order_notes" class="text-black">订单备注</label>
+              <textarea name="c_order_notes" id="c_order_notes" cols="30" rows="5" class="form-control"
+                placeholder="选填，请先和商家协商一致"></textarea>
+              <button class="btn btn-primary btn-lg py-3 btn-block" type="submit">确定</button>
+              </form>
             </div>
           </div>
           <div class="col-md-6">
-            <!-- <div class="row mb-5">
-              <div class="col-md-12">
-                <h2 class="h3 mb-3 text-black">优惠劵代码</h2>
-                <div class="p-3 p-lg-5 border">
-                  <label for="c_code" class="text-black mb-3">请输入优惠卷代码</label>
-                  <div class="input-group w-75">
-                    <input type="text" class="form-control" id="c_code" placeholder="优惠劵代码" aria-label="Coupon Code" aria-describedby="button-addon2">
-                    <div class="input-group-append">
-                      <button class="btn btn-primary btn-sm" type="button" id="button-addon2">领取</button>
-                    </div>
-                  </div>
-
-                </div>
-              </div>
-            </div> -->
-            
             <div class="row mb-5">
               <div class="col-md-12">
                 <h2 class="h3 mb-3 text-black">您的订单</h2>
@@ -225,57 +147,61 @@
                       <th>价格</th>
                     </thead>
                     <tbody>
+                      <% for(var i=0 ;i < list.length; i++){ %>
                       <tr>
-                        <td>Top Up T-Shirt <strong class="mx-2">x</strong> 1</td>
-                        <td>$250.00</td>
+                        <td><%=list[i].product_name %><strong class="mx-2">x</strong> <%=list[i].amount %></td>
+                        <td>￥<%=list[i].sum_price %></td>
                       </tr>
-                      <tr>
-                        <td>Polo Shirt <strong class="mx-2">x</strong>   1</td>
-                        <td>$100.00</td>
-                      </tr>
+                      <%} %>
                       <tr>
                         <td class="text-black font-weight-bold"><strong>合计</strong></td>
-                        <td class="text-black">$350.00</td>
-                      </tr>
-                      <tr>
-                        <td class="text-black font-weight-bold"><strong>实际支付</strong></td>
-                        <td class="text-black font-weight-bold"><strong>$350.00</strong></td>
+                        <td class="text-black">￥<%=obj.total_prices %></td>
                       </tr>
                     </tbody>
                   </table>
 
                   <div class="border p-3 mb-3">
-                    <h3 class="h6 mb-0"><a class="d-block" data-toggle="collapse" href="#collapsebank" role="button" aria-expanded="false" aria-controls="collapsebank">Direct Bank Transfer</a></h3>
+                    <h3 class="h6 mb-0"><a class="d-block" data-toggle="collapse" href="#collapsebank" role="button"
+                        aria-expanded="false" aria-controls="collapsebank">Direct Bank Transfer</a></h3>
 
                     <div class="collapse" id="collapsebank">
                       <div class="py-2">
-                        <p class="mb-0">Make your payment directly into our bank account. Please use your Order ID as the payment reference. Your order won’t be shipped until the funds have cleared in our account.</p>
+                        <p class="mb-0">Make your payment directly into our bank account. Please use your Order ID as
+                          the payment reference. Your order won’t be shipped until the funds have cleared in our
+                          account.</p>
                       </div>
                     </div>
                   </div>
 
                   <div class="border p-3 mb-3">
-                    <h3 class="h6 mb-0"><a class="d-block" data-toggle="collapse" href="#collapsecheque" role="button" aria-expanded="false" aria-controls="collapsecheque">Cheque Payment</a></h3>
+                    <h3 class="h6 mb-0"><a class="d-block" data-toggle="collapse" href="#collapsecheque" role="button"
+                        aria-expanded="false" aria-controls="collapsecheque">Cheque Payment</a></h3>
 
                     <div class="collapse" id="collapsecheque">
                       <div class="py-2">
-                        <p class="mb-0">Make your payment directly into our bank account. Please use your Order ID as the payment reference. Your order won’t be shipped until the funds have cleared in our account.</p>
+                        <p class="mb-0">Make your payment directly into our bank account. Please use your Order ID as
+                          the payment reference. Your order won’t be shipped until the funds have cleared in our
+                          account.</p>
                       </div>
                     </div>
                   </div>
 
                   <div class="border p-3 mb-5">
-                    <h3 class="h6 mb-0"><a class="d-block" data-toggle="collapse" href="#collapsepaypal" role="button" aria-expanded="false" aria-controls="collapsepaypal">Paypal</a></h3>
+                    <h3 class="h6 mb-0"><a class="d-block" data-toggle="collapse" href="#collapsepaypal" role="button"
+                        aria-expanded="false" aria-controls="collapsepaypal">Paypal</a></h3>
 
                     <div class="collapse" id="collapsepaypal">
                       <div class="py-2">
-                        <p class="mb-0">Make your payment directly into our bank account. Please use your Order ID as the payment reference. Your order won’t be shipped until the funds have cleared in our account.</p>
+                        <p class="mb-0">Make your payment directly into our bank account. Please use your Order ID as
+                          the payment reference. Your order won’t be shipped until the funds have cleared in our
+                          account.</p>
                       </div>
                     </div>
                   </div>
 
                   <div class="form-group">
-                    <button class="btn btn-primary btn-lg py-3 btn-block" onclick="window.location='/thankyou'">提交订单</button>
+                    <button class="btn btn-primary btn-lg py-3 btn-block"
+                      onclick="window.location='/thankyou'">提交订单</button>
                   </div>
 
                 </div>
@@ -284,18 +210,19 @@
 
           </div>
         </div>
-        <!-- </form> -->
       </div>
     </div>
-        <div class="row pt-5 mt-5 text-center">
-          <div class="col-md-12">
-            <p>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            Copyright &copy;<script data-cfasync="false"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" class="text-primary">Colorlib</a>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            </p>
-          </div>
-        </div>
+    <div class="row pt-5 mt-5 text-center">
+      <div class="col-md-12">
+        <p>
+          Copyright &copy;
+          <script data-cfasync="false"></script>
+          <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i
+            class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank"
+            class="text-primary">Colorlib</a>
+        </p>
+      </div>
+    </div>
   </div>
 
   <script src="/javascripts/jquery-3.3.1.min.js"></script>
@@ -305,8 +232,9 @@
   <script src="/javascripts/owl.carousel.min.js"></script>
   <script src="/javascripts/jquery.magnific-popup.min.js"></script>
   <script src="/javascripts/aos.js"></script>
-
+  <script src="/javascripts/location.js"></script>
   <script src="/javascripts/main.js"></script>
-    
-  </body>
+
+</body>
+
 </html>
