--- a/views/index.ejs
+++ b/views/index.ejs
@@ -68,7 +68,7 @@
           <ul class="site-menu js-clone-nav d-none d-md-block">
             <li class="has-children active">
               <a href="/">首页</a>
-              <ul class="dropdown">
+              <!-- <ul class="dropdown">
                 <li><a href="#">Menu One</a></li>
                 <li><a href="#">Menu Two</a></li>
                 <li><a href="#">Menu Three</a></li>
@@ -80,14 +80,14 @@
                     <li><a href="#">Menu Three</a></li>
                   </ul>
                 </li>
-              </ul>
+              </ul> -->
             </li>
             <li class="has-children">
-              <a href="/about">关于</a>
+              <a>专区分类</a>
               <ul class="dropdown">
-                <li><a href="#">Menu One</a></li>
-                <li><a href="#">Menu Two</a></li>
-                <li><a href="#">Menu Three</a></li>
+                <li><a href="#">送朋友</a></li>
+                <li><a href="#">送恋人</a></li>
+                <li><a href="#">送长辈</a></li>
               </ul>
             </li>
             <li><a href="/shop">店铺</a></li>
@@ -145,8 +145,8 @@
                 <img src="images/home_floor_lover.png" alt="" class="img-fluid" style="width: 100%;">
               </figure>
               <div class="text">
-                <span class="text-uppercase">鲜花</span>
-                <h3>爱情鲜花专区</h3>
+                <span class="text-uppercase">久违亦如初见</span>
+                <h3>送朋友</h3>
               </div>
             </a>
           </div>
@@ -157,7 +157,7 @@
               </figure>
               <div class="text">
                 <span class="text-uppercase">永生花</span>
-                <h3>永生花专区</h3>
+                <h3>送恋人</h3>
               </div>
             </a>
           </div>
@@ -168,7 +168,7 @@
               </figure>
               <div class="text">
                 <span class="text-uppercase">鲜花</span>
-                <h3>送长辈鲜花专区</h3>
+                <h3>送长辈</h3>
               </div>
             </a>
           </div>
