--- a/views/shopsingle.ejs
+++ b/views/shopsingle.ejs
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Shoppers &mdash; Colorlib e-Commerce Template</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Mukta:300,400,700"> 
-    <link rel="stylesheet" href="/stylesheets/fonts/icomoon/style.css">
+<head>
+  <title>Shoppers &mdash; Colorlib e-Commerce Template</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
-    <link rel="stylesheet" href="/stylesheets/magnific-popup.css">
-    <link rel="stylesheet" href="/stylesheets/jquery-ui.css">
-    <link rel="stylesheet" href="/stylesheets/owl.carousel.min.css">
-    <link rel="stylesheet" href="/stylesheets/owl.theme.default.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Mukta:300,400,700">
+  <link rel="stylesheet" href="/stylesheets/fonts/icomoon/style.css">
+
+  <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
+  <link rel="stylesheet" href="/stylesheets/magnific-popup.css">
+  <link rel="stylesheet" href="/stylesheets/jquery-ui.css">
+  <link rel="stylesheet" href="/stylesheets/owl.carousel.min.css">
+  <link rel="stylesheet" href="/stylesheets/owl.theme.default.min.css">
 
 
-    <link rel="stylesheet" href="/stylesheets/aos.css">
+  <link rel="stylesheet" href="/stylesheets/aos.css">
 
-    <link rel="stylesheet" href="/stylesheets/style1.css">
-    
-  </head>
-  <body>
-  
+  <link rel="stylesheet" href="/stylesheets/style1.css">
+
+</head>
+
+<body>
+
   <div class="site-wrap">
     <header class="site-navbar" role="banner">
       <div class="site-navbar-top">
@@ -51,15 +53,16 @@
                       <span class="icon icon-shopping_cart"></span>
                       <span class="count">2</span>
                     </a>
-                  </li> 
-                  <li class="d-inline-block d-md-none ml-md-0"><a href="#" class="site-menu-toggle js-menu-toggle"><span class="icon-menu"></span></a></li>
+                  </li>
+                  <li class="d-inline-block d-md-none ml-md-0"><a href="#" class="site-menu-toggle js-menu-toggle"><span
+                        class="icon-menu"></span></a></li>
                 </ul>
-              </div> 
+              </div>
             </div>
 
           </div>
         </div>
-      </div> 
+      </div>
       <nav class="site-navigation text-right text-md-center" role="navigation">
         <div class="container">
           <ul class="site-menu js-clone-nav d-none d-md-block">
@@ -97,10 +100,11 @@
     <div class="bg-light py-3">
       <div class="container">
         <div class="row">
-          <div class="col-md-12 mb-0"><a href="/">首页</a> <span class="mx-2 mb-0">/</span> <strong class="text-black">商品</strong></div>
+          <div class="col-md-12 mb-0"><a href="/">首页</a> <span class="mx-2 mb-0">/</span> <strong
+              class="text-black">商品</strong></div>
         </div>
       </div>
-    </div>  
+    </div>
 
     <div class="site-section">
       <div class="container">
@@ -109,38 +113,29 @@
             <img src="<%=obj.product_img %>" alt="Image" class="img-fluid">
           </div>
           <div class="col-md-6">
-            <h2 class="text-black"><%=obj.product_name %></h2>
-            <p><%=obj.details %></p>
-            <p class="mb-4">花语：<%=obj.intro %></p>
+            <h2 class="text-black">
+              <%=obj.product_name %>
+            </h2>
+            <p>
+              <%=obj.details %>
+            </p>
+            <p class="mb-4">花语：<%=obj.intro %>
+            </p>
             <p><strong class="text-primary h4">￥<%=obj.price %></strong></p>
-            <div class="mb-1 d-flex">
-              <label for="option-sm" class="d-flex mr-3 mb-3">
-                <span class="d-inline-block mr-2" style="top:-2px; position: relative;"><input type="radio" id="option-sm" name="shop-sizes"></span> <span class="d-inline-block text-black">Small</span>
-              </label>
-              <label for="option-md" class="d-flex mr-3 mb-3">
-                <span class="d-inline-block mr-2" style="top:-2px; position: relative;"><input type="radio" id="option-md" name="shop-sizes"></span> <span class="d-inline-block text-black">Medium</span>
-              </label>
-              <label for="option-lg" class="d-flex mr-3 mb-3">
-                <span class="d-inline-block mr-2" style="top:-2px; position: relative;"><input type="radio" id="option-lg" name="shop-sizes"></span> <span class="d-inline-block text-black">Large</span>
-              </label>
-              <label for="option-xl" class="d-flex mr-3 mb-3">
-                <span class="d-inline-block mr-2" style="top:-2px; position: relative;"><input type="radio" id="option-xl" name="shop-sizes"></span> <span class="d-inline-block text-black"> Extra Large</span>
-              </label>
-            </div>
             <div class="mb-5">
               <div class="input-group mb-3" style="max-width: 120px;">
-              <div class="input-group-prepend">
-                <button class="btn btn-outline-primary js-btn-minus" type="button">&minus;</button>
-              </div>
-              <input type="text" class="form-control text-center" value="1" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
-              <div class="input-group-append">
-                <button class="btn btn-outline-primary js-btn-plus" type="button">&plus;</button>
+                <!-- <div class="input-group-prepend"> -->
+                  <form action="/shop/add/<%=obj.id %>" method="POST">
+                  <button class="btn btn-outline-primary js-btn-minus" type="button">&minus;</button>
+                <!-- </div> -->
+                  <input type="text" class="form-control text-center" value="1" aria-label="Example text with button addon" aria-describedby="button-addon1" name="amount">
+                <!-- <div class="input-group-append"> -->
+                  <button class="btn btn-outline-primary js-btn-plus" type="button" >&plus;</button>
+                <!-- </div> -->
+                <p><button type="submit" class="buy-now btn btn-sm btn-primary">加入购物车</button></p>
+                  </form>
               </div>
             </div>
-
-            </div>
-            <p><a href="/shop/add/<%=obj.id %>" class="buy-now btn btn-sm btn-primary">加入购物车</a></p>
-
           </div>
         </div>
       </div>
@@ -157,35 +152,44 @@
           <div class="col-md-12">
             <div class="nonloop-block-3 owl-carousel">
               <% for(var i=0 ;i < list.length; i++){ %>
-              <div class="item">
-                <div class="block-4 text-center">
-                  <figure class="block-4-image">
-                    <a href="<%=list[i].id %>">
-                    <img src="<%=list[i].product_img %>" alt="Image placeholder" class="img-fluid">
-                    </a>
-                  </figure>
-                  <div class="block-4-text p-4">
-                    <h3><a href="<%=list[i].id %>"><%=list[i].product_name %></a></h3>
-                    <p class="mb-0"><%=list[i].intro %></p>
-                    <p class="text-primary font-weight-bold">￥<%=list[i].price %></p>
+                <div class="item">
+                  <div class="block-4 text-center">
+                    <figure class="block-4-image">
+                      <a href="<%=list[i].id %>">
+                        <img src="<%=list[i].product_img %>" alt="Image placeholder" class="img-fluid">
+                      </a>
+                    </figure>
+                    <div class="block-4-text p-4">
+                      <h3><a href="<%=list[i].id %>">
+                          <%=list[i].product_name %>
+                        </a></h3>
+                      <p class="mb-0">
+                        <%=list[i].intro %>
+                      </p>
+                      <p class="text-primary font-weight-bold">￥<%=list[i].price %>
+                      </p>
+                    </div>
                   </div>
                 </div>
-              </div>
-              <%} %>
+                <%} %>
             </div>
           </div>
         </div>
       </div>
     </div>
 
-        <div class="row pt-5 mt-5 text-center">
-          <div class="col-md-12">
-            <p>
-            Copyright &copy;<script data-cfasync="false"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" class="text-primary">Colorlib</a>
-            </p>
-          </div>
-          
-        </div>
+    <div class="row pt-5 mt-5 text-center">
+      <div class="col-md-12">
+        <p>
+          Copyright &copy;
+          <script data-cfasync="false"></script>
+          <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i
+            class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank"
+            class="text-primary">Colorlib</a>
+        </p>
+      </div>
+
+    </div>
   </div>
 
   <script src="/javascripts/jquery-3.3.1.min.js"></script>
@@ -195,8 +199,9 @@
   <script src="/javascripts/owl.carousel.min.js"></script>
   <script src="/javascripts/jquery.magnific-popup.min.js"></script>
   <script src="/javascripts/aos.js"></script>
-
+  <script src="/javascripts/shop.js"></script>
   <script src="/javascripts/main.js"></script>
-    
-  </body>
+
+</body>
+
 </html>
