--- a/views/index.ejs
+++ b/views/index.ejs
@@ -156,7 +156,7 @@
                 <img src="images/home_floor_song.jpg" alt="" class="img-fluid" style="width: 100%;">
               </figure>
               <div class="text">
-                <span class="text-uppercase">永生花</span>
+                <span class="text-uppercase">所有怦然心动，都是你</span>
                 <h3>送恋人</h3>
               </div>
             </a>
@@ -167,7 +167,7 @@
                 <img src="images/home_floor_elder.png" alt="" class="img-fluid" style="width: 100%;">
               </figure>
               <div class="text">
-                <span class="text-uppercase">鲜花</span>
+                <span class="text-uppercase">谢谢你 我爱你</span>
                 <h3>送长辈</h3>
               </div>
             </a>
